fix spacing on li

--- a/_includes/css/main.css
+++ b/_includes/css/main.css
@@ -82,7 +82,7 @@ hr {
   text-align: center;
   padding: 0 4%;
 }
-.container p, .container ol, .container ul {
+.container p, .container ol, .container ul, .container li {
   font-size: 22px;
   padding: 0 5%;
   line-height: 150%;
